@@ -30,6 +30,16 @@ public class PlayerManager {
     }
 
     /**
+     * getPlayer method returns the Player object at the specified index.
+     * @param index index of the player
+     * @return Player object
+     */
+
+    public Player getPlayer(int index) {
+        return players.get(index);
+    }
+
+    /**
      * playerAdd method adds a new Player object to the ArrayList.
      * The player is initialized with default values.
      */
@@ -63,7 +73,27 @@ public class PlayerManager {
      * playerRemove method removes the last Player object from the ArrayList.
      */
     public void playerRemove() {
-        players.remove(players.size() - 1);
+        players.removeLast();
         System.out.println(String.format("Debug: Player removed. Current number of players: %d", players.size()));
+    }
+
+    /**
+     * playerRemove method removes the specified Player object from the ArrayList.
+     * @param index index of the player to be removed
+     */
+
+    public void playerRemove(int index) {
+        players.remove(index);
+        System.out.println(String.format("Debug: Player removed. Current number of players: %d", players.size()));
+    }
+
+    public void changePlayerName(int index, String name) {
+        players.get(index).setName(name);
+        System.out.println(String.format("Debug: Player %d name changed to %s", index, name));
+    }
+
+    public void changePlayerColor(int index, Color color) {
+        players.get(index).setColor(color);
+        System.out.println(String.format("Debug: Player %d color changed to %s", index, color));
     }
 }
